# topic4_pet_translator_demo

./: CONTRIBUTIONS.md  Dockerfile  README.md  REPOSITORY.md  pyproject.toml  requirements.txt
configs/: demo_scenarios.json
docs/: EXPERIMENT_DESIGN.md  VIDEO_SCRIPT.md
outputs/: demo_results.csv  demo_results.json  run_summary.md
scripts/: smoke_test.py
src/pet_translator_demo/: __init__.py  api.py  classifier.py  cli.py  config.py  features.py  interpreter.py  io.py  models.py  pipeline.py
tests/: test_api_contract.py  test_pipeline.py
web/: app.js  index.html  styles.css
