[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "topic4-pet-translator-demo"
version = "0.1.0"
description = "Topic 4 pet translator demo with mock audio classification and LLM-style translation."
requires-python = ">=3.10"

[project.scripts]
pet-translator-demo = "pet_translator_demo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
